--- a/com.icons8.Lunacy.yml
+++ b/com.icons8.Lunacy.yml
@@ -50,6 +50,7 @@ modules:
           type: html
           url: https://docs.icons8.com/release-notes
           pattern: (https://lun-eu.icons8.com/s/setup/Lunacy_([0-9.]+).deb)
+          is-main-source: true
 
       - type: script
         dest-filename: apply_extra
