--- a/com.icons8.Lunacy.yml
+++ b/com.icons8.Lunacy.yml
@@ -14,6 +14,8 @@ finish-args:
   - --socket=cups
   - --socket=pulseaudio
   - --socket=x11
+  # It is needed for the correct operation of settings saving under Wayland.
+  - --filesystem=home
   - --filesystem=xdg-download
   - --filesystem=xdg-documents
   - --filesystem=xdg-run/gvfs
