--- a/com.icons8.Lunacy.yml
+++ b/com.icons8.Lunacy.yml
@@ -13,11 +13,9 @@ finish-args:
   - --share=ipc
   - --socket=cups
   - --socket=pulseaudio
-  - --socket=wayland
   - --socket=x11
-  # More specific filesystem access for settings and cache
-  - --filesystem=~/.local/share/Icons8:Lunacy
-  - --filesystem=~/.local/share/flatpak/overrides/com.icons8.Lunacy:create
+  # It is needed for the correct operation of settings saving under Wayland.
+  - --filesystem=~/.local/share
   - --filesystem=xdg-download
   - --filesystem=xdg-documents
   - --filesystem=xdg-run/gvfs
@@ -25,8 +23,6 @@ finish-args:
   - --talk-name=org.gtk.vfs.*
   # Network needed for remote asset importing
   - --share=network
-  # Environment variables for better Wayland support
-  - --env=XCURSOR_PATH=/run/host/user-share/icons:/run/host/share/icons
 
 modules:
   - name: lunacy
