--- a/com.icons8.Lunacy.yml
+++ b/com.icons8.Lunacy.yml
@@ -15,7 +15,7 @@ finish-args:
   - --socket=pulseaudio
   - --socket=x11
   # It is needed for the correct operation of settings saving under Wayland.
-  - --filesystem=~/.local/share
+  # - --filesystem=~/.local/share
   - --filesystem=xdg-download
   - --filesystem=xdg-documents
   - --filesystem=xdg-run/gvfs
