Update desktop file for beta version
- Change app name from 'Lunacy' to 'Lunacy Beta'
- Update GenericName to indicate beta version
- Add Comment field to distinguish from stable version

This ensures users can differentiate between stable and beta versions in their application menu.

--- a/com.icons8.Lunacy.desktop
+++ b/com.icons8.Lunacy.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
-Name=Lunacy
-GenericName=Lunacy Graphic Editor
+Name=Lunacy Beta
+GenericName=Lunacy Graphic Editor (Beta Version)
+Comment=Vector graphics editor (Beta Version)
 Exec=lunacy %u
 Icon=com.icons8.Lunacy
 Type=Application
