--- a/com.icons8.Lunacy.Beta.desktop
+++ b/com.icons8.Lunacy.Beta.desktop
@@ -3,7 +3,7 @@ Name=Lunacy Beta
 GenericName=Lunacy Graphic Editor (Beta Version)
 Comment=Vector graphics editor (Beta Version)
 Exec=lunacy %u
-Icon=com.icons8.Lunacy
+Icon=com.icons8.Lunacy.Beta
 Type=Application
 Terminal=false
 Categories=Graphics;2DGraphics;VectorGraphics;
