--- a/com.icons8.Lunacy.yml
+++ b/com.icons8.Lunacy.yml
@@ -14,8 +14,8 @@ finish-args:
   - --socket=cups
   - --socket=pulseaudio
   - --socket=x11
-  # It is needed for the correct operation of settings saving under Wayland.
-  # - --filesystem=~/.local/share
+  # Access to Icons8 settings directory only (instead of entire ~/.local/share)
+  - --filesystem=~/.local/share/Icons8
   - --filesystem=xdg-download
   - --filesystem=xdg-documents
   - --filesystem=xdg-run/gvfs
