--- a/.github/workflows/update-lunacy-beta.yml
+++ b/.github/workflows/update-lunacy-beta.yml
@@ -251,6 +251,7 @@ jobs:
               f.write(f"metainfo_updated={metainfo_updated}\n")
           
           print(f"SUCCESS: Beta update completed for version {current_version}")
+          EOF
 
       - name: Create Pull Request
         if: steps.update.outputs.updated == 'true'
