--- a/.github/workflows/update-lunacy.yml
+++ b/.github/workflows/update-lunacy.yml
@@ -253,7 +253,7 @@ jobs:
             - ✅ Updated file sizes
             - Release description: ${{ steps.update.outputs.metainfo_updated == 'true' && '✅ Updated with detailed changelog' || '⚠️ Generic description (changelog extraction failed)' }}
 
-            **Auto-merge is enabled** - this PR will be automatically merged after all checks pass.
+            **Auto-merge enabled** - this PR will be automatically merged after all checks pass.
 
             **Note**: The core update (URLs, hashes, sizes) always succeeds. Release description update is a bonus feature that may fail if the release notes page structure changes.
 
@@ -270,8 +270,13 @@ jobs:
       - name: Enable auto-merge
         if: steps.create-pr.outputs.pull-request-number
         run: |
+          # Try to enable auto-merge, but don't fail if not supported
           gh pr merge ${{ steps.create-pr.outputs.pull-request-number }} \
             --auto --squash \
-            --subject "🤖 Auto-merge: Update Lunacy to ${{ steps.update.outputs.version }}"
+            --subject "🤖 Auto-merge: Update Lunacy to ${{ steps.update.outputs.version }}" || {
+            echo "⚠️ Auto-merge not available. PR created: ${{ steps.create-pr.outputs.pull-request-url }}"
+            echo "Please merge manually or enable auto-merge in repository settings."
+            exit 0
+          }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
